@@ -4,7 +4,10 @@ Changelog for zest.releaser
 3.14 (2010-08-26)
 -----------------
 
-- experimental support for git svn tagging
+- experimental support for git svn tagging, fully test-covered
+  [chaoflow]
+
+- fail if no tag was created, not test-covered
   [chaoflow]
 
 - svn available_tags method: intercept 'Repository moved' note in svn
